[gd_scene load_steps=8 format=3 uid="uid://co6gwih332e6r"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_16b4a"]
[ext_resource type="Shader" path="res://Shaders/pause_menu.gdshader" id="1_kqa4u"]
[ext_resource type="FontFile" uid="uid://j4agnopltlih" path="res://Fonts/Pixel Game.otf" id="2_5u74a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1gxu8"]
shader = ExtResource("1_kqa4u")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_n3ovj"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.701777, 0.122648, 0.153251, 1)]
}

[sub_resource type="Animation" id="Animation_aef5c"]
resource_name = "blur"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.376471, 0.376471, 0.376471, 0), Color(0.336608, 0.336608, 0.336608, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgt5u"]
_data = {
"RESET": SubResource("Animation_n3ovj"),
"blur": SubResource("Animation_aef5c")
}

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16b4a")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1gxu8")
layout_mode = 0
offset_right = 641.0
offset_bottom = 360.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = -1.0
offset_right = 639.0
offset_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="resumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
tooltip_text = "Resume the run"
theme_override_colors/font_hover_pressed_color = Color(1.05888e-06, 0.511778, 0.697729, 1)
theme_override_colors/font_hover_color = Color(3.08037e-06, 0.719433, 0.973512, 1)
theme_override_fonts/font = ExtResource("2_5u74a")
theme_override_font_sizes/font_size = 40
text = "RESUME"

[node name="quitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
tooltip_text = "Return to the town"
theme_override_colors/font_hover_pressed_color = Color(0.856205, 0.324382, 0.164645, 1)
theme_override_colors/font_hover_color = Color(0.964372, 0.482193, 0.344862, 1)
theme_override_fonts/font = ExtResource("2_5u74a")
theme_override_font_sizes/font_size = 40
text = "QUIT TO TOWN"

[node name="quitButton2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
tooltip_text = "Return to the town"
theme_override_colors/font_hover_pressed_color = Color(0.856205, 0.324382, 0.164645, 1)
theme_override_colors/font_hover_color = Color(0.964372, 0.482193, 0.344862, 1)
theme_override_fonts/font = ExtResource("2_5u74a")
theme_override_font_sizes/font_size = 32
text = "Quit to Main menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lgt5u")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quitButton2" to="." method="_on_quit_button_2_pressed"]
